--- a/css/index.css
+++ b/css/index.css
@@ -48,12 +48,18 @@
     flex-direction: row;
     position:relative;
     top: 30px;
+   
 }
 
 .chatbox{
     width: 100%;
-    height: 900px;
+    height: 600px;
     overflow-y: auto;
+    margin-top: 15px;
+    position:sticky;
+    top: 30px;
+    /* border: 1px solid red; */
+ 
 
 
 }
@@ -65,6 +71,7 @@
     position: sticky;
     top: 30px;
     margin: 15px;
+    margin-right: 30px;
 }
 .th h3 {
 
@@ -88,6 +95,8 @@
     background-color: lightgreen;
     border-radius: 20px;
     width: 400px;
+    padding: 10px;
+    margin: 10px;
 
 }
 
@@ -98,20 +107,20 @@
     background-color: lightblue;
     border-radius: 20px;
     width: 400px;
+    padding: 10px;
+    margin: 10px;
 }
-.chatbox{
-    margin-top: 15px;
-    position: relative;
-    top: 30px;
-    border: 1px solid red;
-}
+
+
 
 .serch form{
 
-    position: relative;
+    position: sticky;
     bottom: 12px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     margin: 10px;
     bottom: 12px;
 
@@ -119,8 +128,12 @@
 
 input[type="text"]{
     width: 800px;
+    position: sticky;
+    bottom: 12px;
 }
 
 input[type="submit"]{
    margin-left: 10px;
+   position: sticky;
+   bottom: 12px;
 }
