--- a/css/index.css
+++ b/css/index.css
@@ -97,6 +97,7 @@
     width: 400px;
     padding: 10px;
     margin: 10px;
+    
 
 }
 
@@ -109,9 +110,16 @@
     width: 400px;
     padding: 10px;
     margin: 10px;
+    
 }
 
+.mine h5 {
+    word-wrap: break-word;
+}
 
+.other h5 {
+    word-wrap: break-word;
+}
 
 .serch form{
 
